[gd_scene load_steps=7 format=3 uid="uid://bwx1avchebes3"]

[ext_resource type="Texture2D" uid="uid://by4fpjw3bu86u" path="res://art/art.png" id="1_liwqq"]
[ext_resource type="Script" path="res://ui/level_select.gd" id="2_2np3s"]
[ext_resource type="Theme" uid="uid://cyyh23cla17b6" path="res://ui/menu.tres" id="2_qgaqs"]
[ext_resource type="PackedScene" uid="uid://ctn2i1gxvcwih" path="res://ui/back_button.tscn" id="4_baop0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p82i1"]
atlas = ExtResource("1_liwqq")
region = Rect2(0, 48, 16, 16)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v1k0s"]
texture = SubResource("AtlasTexture_p82i1")
expand_margin_left = 16.0
expand_margin_top = 16.0
expand_margin_right = 16.0
expand_margin_bottom = 16.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_qgaqs")
script = ExtResource("2_2np3s")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_v1k0s")

[node name="LevelContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_qgaqs")
columns = 5

[node name="ButtonContainer" type="AspectRatioContainer" parent="LevelContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="LevelContainer/ButtonContainer"]
layout_mode = 2
action_mode = 0
text = "1"
icon_alignment = 1

[node name="BackButton" parent="." instance=ExtResource("4_baop0")]
layout_mode = 1

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
